syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc RegisterValidate(RegisterValidateRequest) returns (RegisterValidateResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc AdminLogin(LoginRequest) returns (LoginResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse){}
  rpc ChangePassword(ChangePasswordRequest) returns (ForgotPasswordResponse) {}
}




// Register

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string phone = 4;
  }
  
  message RegisterResponse {
    int64 status = 1;
    string error = 2;
  }

// Register Validate

message RegisterValidateRequest{
  string otp =1;
}

message RegisterValidateResponse{
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

// Login

message LoginRequest{
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse{
  int64 status = 1;
  string error = 2;
  string accesstoken =3;
}

//Validate

message ValidateRequest{
  string accesstoken = 1;
}

message ValidateResponse{
  int64 status = 1;
  string error = 2;
  int64 userid = 3;
  string source = 4;
}

// Forgot Password

message ForgotPasswordRequest{
  string email = 1;
}

message ForgotPasswordResponse{
  int64 status = 1;
  string error = 2;
}

// Change Password

message ChangePasswordRequest{
  int64  id = 1;
  string password = 2;
}


